--- a/rotion-app/src/renderer/src/styles/global.scss
+++ b/rotion-app/src/renderer/src/styles/global.scss
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html{
+  overflow: hidden;
+}
+
+
+#header{
+  -webkit-app-region:drag;
+}
